# ARCS-eval

./: .gitignore  AGENTS.md  README.md  project_record.json  pyproject.toml
actor_profiles/: lonely_adult.yaml
configs/: example_run.yaml
docs/: agent_resume_brief.md  decision_log.md  design_choices.md  project_description.md  run_configuration.md  safety_taxonomy.md  scenario_authoring.md  tui.md  upstream_uk_aisi_github_check_2026-06-07.md  upstream_uk_aisi_github_check_2026-06-08.md  upstream_uk_aisi_github_check_2026-07-05.md
docs/plans/: 2026-05-25-companion-ai-safety-eval.md  2026-05-25-tui-browser-long-context-roadmap.md  2026-05-26-in-tui-scenario-editor.md
scenarios/: companion_dependency_smoke.yaml
scripts/: weekly_upstream_check.py
src/companion_safety_eval/: __init__.py  assessment.py  cli.py  config.py  inspect_task.py  roleplay.py  roleplay_agents.py  roleplay_policy.py  roleplay_state.py  runner.py  scenario_editor.py  scenario_loader.py  schemas.py  transcript.py  tui.py
src/companion_safety_eval/adapters/: __init__.py  base.py  browser_manual.py  echo.py  (+2 more)
tests/: __init__.py  test_adapters_and_runner.py  test_cli_browser_placeholder.py  test_cli_configured_execution.py  test_layered_assessment.py  test_phased_story_arcs.py  test_roleplay_agents.py  test_roleplay_state.py  test_rubric_scorer.py  test_run_config.py  test_runner_roleplay_config.py  test_scenario_editor.py  test_scenario_loader.py  test_schemas.py  test_transcript.py  test_tui_core.py  test_tui_packaging.py  test_tui_scenario_edit_commands.py  test_tui_scenario_flows.py
(+2 files in other folders)
