[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcs-companion-ai-safety-eval"
version = "0.1.0"
description = "ARCS: Agentic Role-play for Child Safety, an Inspect-compatible multi-turn evaluation suite for companion AI platforms."
requires-python = ">=3.10"
dependencies = [
  "inspect-ai>=0.3.0",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "typer>=0.12",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
tui = ["textual>=0.80"]
browser = ["playwright>=1.45"]

[project.scripts]
arcs = "companion_safety_eval.cli:app"
companion-safety-eval = "companion_safety_eval.cli:app"
arcs-tui = "companion_safety_eval.tui:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
